--- a/flutter_application_1/android/app/src/main/AndroidManifest.xml
+++ b/flutter_application_1/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_application_1">
+    <!-- Provide required visibility configuration for API level 30 and above -->
+<queries>
+  <!-- If your app checks for SMS support -->
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="https" />
+  </intent>
+  <!-- If your app checks for call support -->
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="http" />
+  </intent>
+</queries>
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="flutter_application_1"
         android:name="${applicationName}"
