tablero, casillas,pregunta,remodelado,funciones y mas

--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   system: ^1.0.0
   dio: ^5.0.3
   intl: ^0.18.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
