--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.18.0
   url_launcher: ^6.1.10
   web_socket_channel: ^2.4.0
+  grouped_list: ^4.2.0
 
 dev_dependencies:
   flutter_test:
