--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
   assets:
     - assets/
     - assets/fichas/
+    - assets/tableros_tienda/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
